--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,12 @@
     <string name="menu_tools">Tools</string>
     <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
+    <string name="tab_1">Tab 1</string>
+    <string name="tab_2">Tab 2</string>
+    <string name="tab_3">Tab 3</string>
+    <string name="tab_label1">TAB 1</string>
+    <string name="tab_label2">TAB 2</string>
+    <string name="tab_label3">TAB 3</string>
+    <string name="tabs">TABS</string>
+    <string name="nav_drawer">navigation drawer</string>
 </resources>
