--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,4 +61,8 @@
     <string name="reminde_me">Reminde me</string>
     <string name="click">click</string>
     <string name="cancel">Cancel</string>
+    <string name="error_occured">error</string>
+    <string name="retry">retry</string>
+    <string name="retry_message">try again later</string>
+    <string name="retrofit_sample">Retrofit Sample</string>
 </resources>
